...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movies-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Movies" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
...
                            <constraint firstItem="ujE-Xw-hH4" firstAttribute="leading" secondItem="lpT-Ne-2ng" secondAttribute="leading" id="ryO-iG-ohl"/>
                            <constraint firstItem="s5y-Dd-dBV" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="16" id="zKB-OO-SE1"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="About" id="mOI-FS-AaM"/>
                    <connections>
                        <outlet property="averageVotesLabel" destination="A3C-ry-zUZ" id="8ok-9c-Ux8"/>
                        <outlet property="backgroundImageView" destination="MjM-ne-L0o" id="xBo-s7-yZr"/>
                        <outlet property="boxArtImageView" destination="s5y-Dd-dBV" id="6p7-AK-Aro"/>
                        <outlet property="detailsLabel" destination="ujE-Xw-hH4" id="PX9-r5-CZ6"/>
                        <outlet property="imdbDetailsButton" destination="Yty-RC-Mzj" id="NEW-gF-ulz"/>
...
